log

Thu 17 Aug 2023 08:45:46 PM UTC: 
 exercises.c | 68 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 68 insertions(+)
In file included from test.c:1:
exercises.c:14:5: error: redefinition of ‘findMax’
   14 | int findMax(int arr[], int size) {
      |     ^~~~~~~
exercises.c:12:5: note: previous definition of ‘findMax’ with type ‘int(int *, int)’
   12 | int findMax(int arr[], int size) { return 0; }
      |     ^~~~~~~
exercises.c:56:6: error: redefinition of ‘reverseArray’
   56 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
exercises.c:48:6: note: previous definition of ‘reverseArray’ with type ‘void(int *, int)’
   48 | void reverseArray(int arr[], int size) {}
      |      ^~~~~~~~~~~~
exercises.c:67:5: error: redefinition of ‘main’
   67 | int main() {
      |     ^~~~
exercises.c:29:5: note: previous definition of ‘main’ with type ‘int()’
   29 | int main() {
      |     ^~~~
test.c:382:5: error: redefinition of ‘main’
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
In file included from test.c:1:
exercises.c:29:5: note: previous definition of ‘main’ with type ‘int()’
   29 | int main() {
      |     ^~~~
Compilation failed
dab39d5
Thu 17 Aug 2023 08:46:30 PM UTC: 
In file included from test.c:1:
exercises.c:14:5: error: redefinition of ‘findMax’
   14 | int findMax(int arr[], int size) {
      |     ^~~~~~~
exercises.c:12:5: note: previous definition of ‘findMax’ with type ‘int(int *, int)’
   12 | int findMax(int arr[], int size) { return 0; }
      |     ^~~~~~~
exercises.c:56:6: error: redefinition of ‘reverseArray’
   56 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
exercises.c:48:6: note: previous definition of ‘reverseArray’ with type ‘void(int *, int)’
   48 | void reverseArray(int arr[], int size) {}
      |      ^~~~~~~~~~~~
exercises.c:67:5: error: redefinition of ‘main’
   67 | int main() {
      |     ^~~~
exercises.c:29:5: note: previous definition of ‘main’ with type ‘int()’
   29 | int main() {
      |     ^~~~
test.c:382:5: error: redefinition of ‘main’
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
In file included from test.c:1:
exercises.c:29:5: note: previous definition of ‘main’ with type ‘int()’
   29 | int main() {
      |     ^~~~
Compilation failed
599740f
Thu 17 Aug 2023 08:46:57 PM UTC: 
In file included from test.c:1:
exercises.c:14:5: error: redefinition of ‘findMax’
   14 | int findMax(int arr[], int size) {
      |     ^~~~~~~
exercises.c:12:5: note: previous definition of ‘findMax’ with type ‘int(int *, int)’
   12 | int findMax(int arr[], int size) { return 0; }
      |     ^~~~~~~
exercises.c:56:6: error: redefinition of ‘reverseArray’
   56 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
exercises.c:48:6: note: previous definition of ‘reverseArray’ with type ‘void(int *, int)’
   48 | void reverseArray(int arr[], int size) {}
      |      ^~~~~~~~~~~~
exercises.c:67:5: error: redefinition of ‘main’
   67 | int main() {
      |     ^~~~
exercises.c:29:5: note: previous definition of ‘main’ with type ‘int()’
   29 | int main() {
      |     ^~~~
test.c:382:5: error: redefinition of ‘main’
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
In file included from test.c:1:
exercises.c:29:5: note: previous definition of ‘main’ with type ‘int()’
   29 | int main() {
      |     ^~~~
Compilation failed
845b8e8
Thu 17 Aug 2023 08:47:38 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:67:5: error: redefinition of ‘main’
   67 | int main() {
      |     ^~~~
exercises.c:29:5: note: previous definition of ‘main’ with type ‘int()’
   29 | int main() {
      |     ^~~~
test.c:382:5: error: redefinition of ‘main’
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
In file included from test.c:1:
exercises.c:29:5: note: previous definition of ‘main’ with type ‘int()’
   29 | int main() {
      |     ^~~~
Compilation failed
b1051f7
Thu 17 Aug 2023 08:49:08 PM UTC: 
 exercises.c | 69 +++----------------------------------------------------------
 1 file changed, 3 insertions(+), 66 deletions(-)
 tests:  0|7
total_score: 0/70
47efd81
Thu 17 Aug 2023 08:54:07 PM UTC: 
 exercises.c | 120 +++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 110 insertions(+), 10 deletions(-)
In file included from test.c:1:
exercises.c:74:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘)’ token
   74 |                        int result[]) {}
      |                                    ^
Compilation failed
b910bd9
Thu 17 Aug 2023 08:54:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:535,
                 from exercises.c:5,
                 from test.c:1:
In function ‘strncpy’,
    inlined from ‘inicializarLibro’ at exercises.c:150:5:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:95:10: error: ‘__builtin_strncpy’ specified bound 100 equals destination size [-Werror=stringop-truncation]
   95 |   return __builtin___strncpy_chk (__dest, __src, __len,
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   96 |                                   __glibc_objsize (__dest));
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~
In function ‘strncpy’,
    inlined from ‘inicializarLibro’ at exercises.c:151:5:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:95:10: error: ‘__builtin_strncpy’ specified bound 50 equals destination size [-Werror=stringop-truncation]
   95 |   return __builtin___strncpy_chk (__dest, __src, __len,
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   96 |                                   __glibc_objsize (__dest));
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b04ca27
Thu 17 Aug 2023 08:57:30 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
total_score: 70/70
7dc1f23
